--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rainbow-me/rainbowkit": "1.3.1",
     "@types/nprogress": "^0.2.3",
     "animate.css": "^4.1.1",
+    "axios": "^1.6.8",
     "chart.js": "^4.0.0",
     "ethers": "^5.7.1",
     "moralis": "^2.23.2",
